Fix navbar overlap of content on mobile

--- a/styles_opt.css
+++ b/styles_opt.css
@@ -1,3 +1,6 @@
+    body {
+    padding-top:70px;
+    }
 
     header {
     position:absolute;
